<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/create_new_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:background="#FFFFFF">

        <!-- Checkmark Image in center -->

        <View
            android:id="@+id/verificatio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/verificatio" />

        <ImageView
            android:id="@+id/checkmark_icon"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="340dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/checkmark_icon"
            android:src="@drawable/check_icon" />

        <ImageView
            android:id="@+id/user_verified_text"
            android:layout_width="153dp"
            android:layout_height="27dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="190dp"
            android:contentDescription="@string/user_verified_image"
            android:src="@drawable/userverified" />

        <EditText
            android:id="@+id/frame_6"
            android:layout_width="347dp"
            android:layout_height="63dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/create_new_"
            android:textAppearance="@style/create_new_"
            android:textSize="18sp"
            android:background="@drawable/frame_6"
            android:gravity="center"
            android:inputType="textPassword"
            android:elevation="5dp">

        </EditText>
        <!-- Password Policy Instruction -->
        <TextView
            android:id="@+id/password_policy"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame_6"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/password_should_be_at_least_15_characters_or_at_least_8_characters_including_a_number_and_a_lowercase_letter"
            android:textColor="#666666"
            android:textSize="13sp" />
        <EditText
            android:id="@+id/frame_7"
            android:layout_width="347dp"
            android:layout_height="63dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/confirm_password"
            android:textAppearance="@style/create_new_"
            android:background="@drawable/frame_6"
            android:textSize="18sp"
            android:gravity="center"
            android:inputType="textPassword"
            android:elevation="5dp">
        </EditText>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="129dp"
            android:background="@drawable/frame_btn"
            android:elevation="6dp"
            android:text="@string/submit"
            android:textAppearance="@style/submit"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>


</ScrollView>
